# Optimal-Control-Prototype-Testing

./: .gitignore  CLAUDE.md  README_1.md  README_2.md  README_3.md  README_4.md  README_5.md  TESTING.md  pyproject.toml  results.tex  streamlit_app.py
scripts/: run_frontend.sh  run_item4_acados.sh  run_item5_crocoddyl.sh  setup_acados_macos.sh  setup_crocoddyl_macos.sh
src/optimal_control_prototype_testing/: acados_cpu.py  crocoddyl_cpu.py  linear_trivial_LQR.py  nonlinear_pendulum.py
src/optimal_control_prototype_testing/item1_jax/: __init__.py  multiple_shooting.py  problem.py  run_item1.py
src/optimal_control_prototype_testing/item2_jax/: __init__.py  ilqr.py  run_item2.py
src/optimal_control_prototype_testing/item3_jax/: __init__.py  run_item3.py  sampling.py
