[project]
name = "optimal-control-prototype-testing"
version = "0.1.0"
description = "Prototype implementations for the five optimal control benchmark items"
readme = "README_4.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
optimal-control-item4-acados = "optimal_control_prototype_testing.acados_cpu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimal_control_prototype_testing"]
