[project]
name = "optimal-control-prototype-testing"
version = "0.1.0"
description = "Prototype implementations for the five optimal control benchmark items"
readme = "README_4.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
optimal-control-item1-jax = "optimal_control_prototype_testing.item1_jax.run_item1:main"
optimal-control-item2-jax = "optimal_control_prototype_testing.item2_jax.run_item2:main"
optimal-control-item4-acados = "optimal_control_prototype_testing.acados_cpu:main"
optimal-control-item5-crocoddyl = "optimal_control_prototype_testing.crocoddyl_cpu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimal_control_prototype_testing"]
